...
    }()
    
    let stackView = UIView()
    
    let listNameTextField: NewTextField = {
        let textField = NewTextField()
        textField.placeholder = "List name..."
        return textField
    }()
    
    let createButton: FilledUIButton = {
        let cb = FilledUIButton()
        cb.setTitle("Create", for: .normal)
...
